--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+   // id "com.google.gms.google-services"
+  
   
    
 }
@@ -68,7 +70,9 @@ flutter {
     source '../..'
 }
 
-dependencies {
-    implementation platform('com.google.firebase:firebase-bom:32.3.1')
-}
-apply plugin: 'com.google.gms.google-services'
+
+dependencies {} 
+// dependencies {
+//     implementation platform('com.google.firebase:firebase-bom:32.3.1')
+// }
+// apply plugin: 'com.google.gms.google-services'
